Included web app URLs

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
     <meta
       property="og:image"
-      content="[your-deployment-link]/images/story-thumbnail-2048.jpg"
+      content="https://tri-aens.github.io/js-fcb/images/story-thumbnail-2048.jpg"
     />
-    <meta property="og:image:secure_url" content="[your-deployment-link]" />
+    <meta
+      property="og:image:secure_url"
+      content="https://tri-aens.github.io/js-fcb/"
+    />
     <title>2048</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
@@ -33,7 +36,7 @@
         <div class="share-label">Share:</div>
         <div class="share-icons">
           <a
-            href="https://www.facebook.com/sharer/sharer.php?u=[your-deployment-link]"
+            href="https://www.facebook.com/sharer/sharer.php?u=https://tri-aens.github.io/js-fcb/"
             target="_blank"
           >
             <img src="./images/share_2048-fb.svg" />
